[project]
name = "flet-easy"
version = "0.1.3"
description = "Flet-Easy is a package created as a Flet add-on, designed to be easy to use with a cleaner order in the code, having many customizable features."
authors = [
    {name = "Daxexs", email = "Daxexsdev@gmail.com"},
]

dependencies = [
    "parse",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "apache-2.0"}
keywords = ["flet easy", "flet", "python", "flet router"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Daxexs"
Repository = "https://github.com/Daxexs/flet-easy"
Documentation = "https://github.com/Daxexs/flet-easy/blob/main/README.md"
Changelog = "https://github.com/Daxexs/flet-easy/blob/main/README.md"

[tool.pdm.scripts]
doc = "mkdocs serve"

[project.optional-dependencies]
test = [
    "mkdocs-material>=9.5.39",
    "mike>=2.1.3",
    "flet<0.22.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

