[project]
name = "flet-easy"
version = "0.2.4"
description = "⚡Flet-Easy is a user-friendly add-on package for Flet, offering a cleaner code structure with numerous customizable features like JWT, routers, decorators, middleware and more."
authors = [{ name = "Daxexs", email = "Daxexsdev@gmail.com" }]

dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "apache-2.0" }
keywords = [
    "flet easy",
    "flet",
    "python",
    "flet route",
    "flet easy route",
    "python web template",
    "app python",
    "flet mvc",
    "flet easy mvc",
    "flet easy fastapi",
    "flutter python",
    "web application",
    "flet middleware",
    "flet jwt",
    "fast flet",
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
all = [
    "pyJWT>=2.0.0",
    "rsa>=4.9",
    "flet>=0.21.0",
    "cookiecutter>=2.6.0",
    "rich-argparse>=1.4.0",
]
JWT = ["pyJWT>=2.0.0", "rsa>=4.9"]
cli = ["flet>=0.21.0", "cookiecutter>=2.6.0", "rich-argparse>=1.4.0"]

[project.urls]
Homepage = "https://github.com/Daxexs"
Repository = "https://github.com/Daxexs/flet-easy"
Documentation = "https://daxexs.github.io/flet-easy"
Changelog = "https://github.com/Daxexs/flet-easy/blob/main/CHANGELOG.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "flet>=0.21.1",
    "ruff>=0.3.4",
    "peewee>=3.17.2",
    "pyJWT>=2.9.0",
    "cookiecutter>=2.6.0",
    "rich-argparse>=1.4.0",
    "rsa>=4.9",
]
docs = ["mkdocs-material>=9.5.17", "mike>=2.0.0"]

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/flet_easy"]
source-includes = ["LICENSE", "README.md"]

[tool.pdm.scripts]
doc = "mkdocs serve"
format = "ruff format"
check = "ruff check"
web = "flet run ./tests/flet-app/main.py -r -w -d -p 7777"
app = "flet run ./tests/flet-app/main.py -r -d"

[project.scripts]
fs = "flet_easy.cli.main:run"
