[project]
name = "flet-easy"
version = "0.2.9"
description = "⚡Flet-Easy is a user-friendly add-on package for Flet, offering a cleaner code structure with numerous customizable features like JWT, routers, decorators, middleware and more."
authors = [{ name = "Daxexs", email = "Daxexsdev@gmail.com" }]

dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "apache-2.0" }
keywords = [
    "flet easy",
    "flet",
    "python",
    "flet route",
    "flet easy route",
    "python web template",
    "app python",
    "flet mvc",
    "flet easy mvc",
    "flet easy fastapi",
    "flutter python",
    "web application",
    "flet middleware",
    "flet jwt",
    "fast flet",
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
all = [
    "pyJWT>=2.0.0",
    "rsa>=4.9",
    "cookiecutter>=2.6.0",
    "rich-argparse>=1.4.0",
    "flet[all]>=0.25.1",
]
JWT = ["pyJWT>=2.0.0", "rsa>=4.9"]
cli = ["cookiecutter>=2.6.0", "rich-argparse>=1.4.0", "flet[all]>=0.25.1"]

[project.urls]
Homepage = "https://github.com/Daxexs"
Repository = "https://github.com/Daxexs/flet-easy"
Documentation = "https://daxexs.github.io/flet-easy"
Changelog = "https://github.com/Daxexs/flet-easy/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
fs = "flet_easy.cli.main:run"

[dependency-groups]
test = [
    "ruff>=0.3.4",
    "flet[all]>=0.25.1",
    "tortoise-orm>=0.22.2",
]
docs = ["mkdocs-material>=9.5.17", "mike>=2.0.0"]
